[package]
name = "bluestone"
version = "0.1.0"
edition = "2024"

[dependencies]
serenity = { version = "0.12", features = ["client", "gateway", "rustls_backend"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
dotenvy = "0.15"
once_cell = "1.21.3"
mc_server = { package = "server", git = "https://github.com/Finnian-Walsh/mc-server-cli.git" }
